# pong_clone

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
include/: Ball.hpp  Game.hpp  Moving_Object.hpp  Paddle.hpp
src/: Ball.cpp  Game.cpp  Moving_Object.cpp  Paddle.cpp  main.cpp
